[package]
name = "dynamic-hyper-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.5"
futures-util = { version = "0.3.21", features = ["io"] }
hyper = { version = "0.14.18", features = ["client"] }
hyperlocal = { version = "0.8.0", features = ["client"] }
test-log = { version = "0.2.10", default-features = false, features = ["trace"] }
tokio = { version = "1.18.2", features = ["full"] }
tokio-util = "0.7.1"
tower = "0.4.12"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "fmt"] }

[dev-dependencies]
color-eyre = "0.6.1"
hyperlocal = { version = "0.8.0", features = ["server"] }
