[package]
name = "dynamic-hyper-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.5"
futures-util = { version = "0.3.21", features = ["io"] }
hyper = { version = "0.14.18", features = ["client"] }
hyperlocal = { version = "0.8.0", features = ["client"], default-features = false }
